@startuml

skinparam classAttributeIconSize 0

title TopDownFunTown

package com.topdownfuntown{

package main{
    class Topdownfuntown <<GameApplication>>{
    Will only load and GameMap
    ..
        -currentGameMap: GameMap
    }

    class GameManager{
        -int:stage
        -weapon: currentWeapon

    }
}

package weapon{
    abstract class Weapon{

    }
}

package stages{
    abstract class GameMap <<GameObject>>{
        Will manage logic
        ..
        ~Player[]: players
        ~Enemies[]: enemies
        ~Blocks[]: obstacles
        +draw(GraphicsContext gc):void
        +update(double delta):void

    }

    class RoomX <<GameMap>>{
        ..
    }

    abstract class SafeRoom{
        -SafeZone: zone
    }
}

package objects{
    class Player <<GameObject>>{
        -double: speed
        -int: health
        +moveUp():void
        +moveDown():void
        +moveLeft():void
        +moveRight():void
    }

    abstract class Enemy <<GameObject>>{
        -int: dmg
        -int: dmg_type
    }

    class Alien <<Enemy>>{
        Do spooky shit

    }

    class Projectile <<GameObject>> {
        -double: speed
        -Vector2: direction
    }

    class SavePortal<<GameObject>>{

    }
}

}

'' assoc
SafeRoom --|> GameMap
RoomX --|> GameMap
Alien --|> Enemy
Player -RIGHT- GameMap
Enemy --{ GameMap
Projectile --{ GameMap
Topdownfuntown -DOWN-{ GameMap


@enduml